[gd_scene load_steps=3 format=3 uid="uid://rrtp77mt1ppv"]

[ext_resource type="Script" uid="uid://ylihonmfxllv" path="res://Scripts/deck_manager_script.gd" id="1_3fjyc"]
[ext_resource type="FontFile" uid="uid://bmy0dltdp5oyx" path="res://Assets/Harmonic.ttf" id="2_d0y6b"]

[node name="DeckManagerNode2d" type="Node2D"]
script = ExtResource("1_3fjyc")

[node name="ConfirmButton" type="Button" parent="."]
offset_left = 469.0
offset_top = 537.0
offset_right = 682.0
offset_bottom = 602.0
theme_override_fonts/font = ExtResource("2_d0y6b")
theme_override_font_sizes/font_size = 26
text = "Confirm"

[node name="Label" type="Label" parent="."]
offset_left = 466.0
offset_top = 37.0
offset_right = 710.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("2_d0y6b")
theme_override_font_sizes/font_size = 20
text = "You have recieved a new card!"

[node name="Reward Card" type="Button" parent="."]
offset_left = 525.0
offset_top = 83.0
offset_right = 631.0
offset_bottom = 217.0

[node name="Button1" type="Button" parent="."]
offset_left = 33.5
offset_top = 358.0
offset_right = 139.5
offset_bottom = 492.0

[node name="Button2" type="Button" parent="."]
offset_left = 173.1
offset_top = 358.0
offset_right = 279.1
offset_bottom = 492.0

[node name="Button3" type="Button" parent="."]
offset_left = 312.7
offset_top = 358.0
offset_right = 418.7
offset_bottom = 492.0

[node name="Button4" type="Button" parent="."]
offset_left = 452.2
offset_top = 358.0
offset_right = 558.2
offset_bottom = 492.0

[node name="Button5" type="Button" parent="."]
offset_left = 591.8
offset_top = 358.0
offset_right = 697.8
offset_bottom = 492.0

[node name="Button6" type="Button" parent="."]
offset_left = 731.3
offset_top = 358.0
offset_right = 837.3
offset_bottom = 492.0

[node name="Button7" type="Button" parent="."]
offset_left = 870.9
offset_top = 358.0
offset_right = 976.9
offset_bottom = 492.0

[node name="Button8" type="Button" parent="."]
offset_left = 1010.4
offset_top = 361.0
offset_right = 1116.4
offset_bottom = 495.0

[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Reward Card" to="." method="_on_reward_card_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
